# E2E-Messaging

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  pyrightconfig.json
.github/workflows/: db-setup.yml
DataComunication-Module/: CMakeLists.txt  README.md  build.yml  install_deps.sh
DataComunication-Module/include/: MessageClient.hpp  SecureConnection.hpp
DataComunication-Module/src/: MessageClient.cpp  SecureConnection.cpp  main.cpp
DataComunication-Module/tests/: test_connection.cpp
User_Creation/: user_create_modern.py
blockchain/: hardhat.config.cjs  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
blockchain/contracts/: MessageDigest.sol
blockchain/scripts/: deploy.ts
blockchain/typechain-types/: MessageDigest.ts  hardhat.d.ts  index.ts
blockchain/typechain-types/factories/: MessageDigest__factory.ts  index.ts
client/: .env.example  config.js  config.mjs  setup.sh
client/desktop/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json
client/desktop/electron/: main.js  preload.js
client/desktop/src/: App.css  App.jsx  api.js
client/desktop/src/components/: AuthScreen.jsx  ChatApp.jsx  ChatWindow.jsx  ConversationList.jsx
client/network/: CMakeLists.txt  README.md  install_deps.sh  package-lock.json  package.json
client/network/include/: Message.hpp  MessageClient.hpp  MessageStore.hpp  SecureClientConnection.hpp
client/network/src/: MessageClient.cpp  MessageStore.cpp  SecureClientConnection.cpp  addon.cpp  main.cpp
client/network/tests/: test_connection.cpp
client/user_creation/: account.js  blockchain.js  package-lock.json  package.json  session.js  sessionStore.js  userCreate.js
server/: api.py  blockchain_service.py  requirements.txt  setup.sh  test_verify.py  verify.html  vm-deploy.sh
server/database/: connection.py  crud.py  setup.py
server/database/Documentation/: architecture.md  crud_endpoints.md  schema.md
server/network/: CMakeLists.txt  install_deps.sh
server/network/include/: MessageServer.hpp  SecureServerConnection.hpp
server/network/src/: MessageServer.cpp  SecureServerConnection.cpp  main.cpp
tests/: test_create_user.js  test_create_user.py
